--- a/packages/core/src/theme-default/components/EditLink/index.module.scss
+++ b/packages/core/src/theme-default/components/EditLink/index.module.scss
@@ -1,5 +1,5 @@
 .editLink {
-  color: var(--modern-c-brand);
+  color: var(--rp-c-brand);
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
