--- a/packages/core/src/theme-default/components/SocialLinks/index.module.scss
+++ b/packages/core/src/theme-default/components/SocialLinks/index.module.scss
@@ -4,10 +4,10 @@
   display: flex;
   fill: currentColor;
   margin-left: 0.5rem;
-  color: var(--modern-c-text-2);
+  color: var(--rp-c-text-2);
 
   &:hover {
-    color: var(--modern-c-text-1);
+    color: var(--rp-c-text-1);
   }
 }
 
