--- a/packages/core/src/theme-default/components/BackDrop/index.module.scss
+++ b/packages/core/src/theme-default/components/BackDrop/index.module.scss
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: var(--modern-z-index-backdrop);
+  z-index: var(--rp-z-index-backdrop);
   background: rgba(0, 0, 0, 0.6);
 }
 @media (min-width: 960px) {
