--- a/packages/core/src/theme-default/components/HomeFeatures/index.module.scss
+++ b/packages/core/src/theme-default/components/HomeFeatures/index.module.scss
@@ -39,12 +39,12 @@
 }
 
 .featureCard {
-  background: var(--modern-home-feature-bg);
+  background: var(--rp-home-feature-bg);
   border: 1px solid transparent;
   transition: all 0.3s;
 }
 
 .featureCard:hover {
-  background: var(--modern-home-feature-hover-bg);
-  border: 1px solid var(--modern-c-brand);
+  background: var(--rp-home-feature-hover-bg);
+  border: 1px solid var(--rp-c-brand);
 }
