--- a/packages/core/src/theme-default/components/LocalSideBar/index.module.scss
+++ b/packages/core/src/theme-default/components/LocalSideBar/index.module.scss
@@ -6,16 +6,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--modern-c-divider-light);
+  border-bottom: 1px solid var(--rp-c-divider-light);
   width: 100%;
-  color: var(--modern-c-text-1);
-  background-color: var(--modern-c-bg);
+  color: var(--rp-c-text-1);
+  background-color: var(--rp-c-bg);
   padding-left: 10px;
   .menu {
     padding: 12px;
     transition: color 0.5s;
     &:hover {
-      color: var(--modern-c-text-3);
+      color: var(--rp-c-text-3);
     }
   }
 }
@@ -34,6 +34,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: var(--modern-z-index-backdrop);
+  z-index: var(--rp-z-index-backdrop);
   background: rgba(0, 0, 0, 0.6);
 }
