--- a/packages/core/src/theme-default/components/Nav/index.module.scss
+++ b/packages/core/src/theme-default/components/Nav/index.module.scss
@@ -13,14 +13,14 @@
 
 .activeItem,
 .singleItem:hover {
-  background-color: var(--modern-c-bg-soft);
+  background-color: var(--rp-c-bg-soft);
   cursor: pointer;
-  color: var(--modern-c-brand-dark);
+  color: var(--rp-c-brand-dark);
   border-radius: 12px;
 }
 
 .navContainer {
-  height: var(--modern-nav-height);
+  height: var(--rp-nav-height);
 }
 
 .navContainer :deep(*) {
@@ -32,10 +32,10 @@
   height: 100%;
   display: flex;
   fill: currentColor;
-  color: var(--modern-c-text-2);
+  color: var(--rp-c-text-2);
 
   &:hover {
-    color: var(--modern-c-text-1);
+    color: var(--rp-c-text-1);
   }
 }
 
@@ -46,7 +46,7 @@
 
 @media (max-width: 768px) {
   :root {
-    --modern-nav-height: 56px;
+    --rp-nav-height: 56px;
   }
   .menu-item:before {
     display: none;
@@ -84,7 +84,7 @@
     height: 30px;
     &.docPage {
       // Avoid influent the sidebar
-      width: calc(100vw - var(--modern-sidebar-width) - 48px);
+      width: calc(100vw - var(--rp-sidebar-width) - 48px);
     }
   }
 
@@ -92,7 +92,7 @@
     display: block;
     width: 100%;
     height: 30px;
-    background: linear-gradient(var(--modern-c-bg), transparent 60%);
+    background: linear-gradient(var(--rp-c-bg), transparent 60%);
     content: '';
   }
 
