--- a/packages/core/src/theme-default/components/NavHambmger/index.module.scss
+++ b/packages/core/src/theme-default/components/NavHambmger/index.module.scss
@@ -60,7 +60,7 @@
   position: absolute;
   width: 16px;
   height: 1.5px;
-  background-color: var(--modern-c-text-2);
+  background-color: var(--rp-c-text-2);
   transition: top 0.25s, background-color 0.5s, transform 0.25s;
 }
 
