--- a/packages/core/src/theme-default/components/NavScreen/index.module.scss
+++ b/packages/core/src/theme-default/components/NavScreen/index.module.scss
@@ -1,13 +1,13 @@
 .navScreen {
   display: none;
   position: fixed;
-  top: var(--modern-nav-height);
+  top: var(--rp-nav-height);
   right: 0;
   bottom: 0;
   left: 0;
   padding: 0 32px;
   width: 100%;
-  background-color: var(--modern-c-bg);
+  background-color: var(--rp-c-bg);
   overflow-y: auto;
   pointer-events: auto;
   z-index: 20;
@@ -34,8 +34,8 @@
   line-height: 24px;
   font-size: 14px;
   font-weight: 500;
-  color: var(--modern-c-text-1);
-  border-bottom: 1px solid var(--modern-c-divider-light);
+  color: var(--rp-c-text-1);
+  border-bottom: 1px solid var(--rp-c-divider-light);
   transition: border-color 0.5s, color 0.25s;
 }
 .navAppearance {
