--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -3,11 +3,11 @@
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: var(--modern-z-index-sidebar);
+  z-index: var(--rp-z-index-sidebar);
   padding: 12px 12px 96px 16px;
   width: calc(100vw - 64px);
   max-width: 320px;
-  background-color: var(--modern-c-bg);
+  background-color: var(--rp-c-bg);
   opacity: 0;
   transform: translateX(-100%);
   transition: opacity 0.5s, transform 0.25s ease;
@@ -18,7 +18,7 @@
 }
 
 :global(.dark) .sidebar {
-  box-shadow: var(--modern-shadow-1);
+  box-shadow: var(--rp-shadow-1);
 }
 
 .sidebar.open {
@@ -31,13 +31,13 @@
 @media (min-width: 960px) {
   .sidebar {
     z-index: 0;
-    margin-top: calc(var(--modern-nav-height));
+    margin-top: calc(var(--rp-nav-height));
     padding-bottom: 128px;
     opacity: 1;
     visibility: visible;
-    width: var(--modern-sidebar-width);
+    width: var(--rp-sidebar-width);
     transform: translateX(0);
-    box-shadow: var(--modern-c-shadow-3);
+    box-shadow: var(--rp-c-shadow-3);
     mask-image: linear-gradient(transparent, #000 20px),
       linear-gradient(270deg, #000 10px, transparent 0);
     --webkit-mask-image: linear-gradient(270deg, #000 10px, transparent 0);
@@ -47,7 +47,7 @@
 @media (min-width: 1440px) {
   .sidebar {
     padding-left: 16px;
-    width: var(--modern-sidebar-width);
+    width: var(--rp-sidebar-width);
     margin-left: calc((100vw - 1440px) / 2);
   }
 }
@@ -62,7 +62,7 @@
 }
 
 .menuItem:hover {
-  background-color: var(--modern-c-bg-mute);
+  background-color: var(--rp-c-bg-mute);
   transition: all 0.2s;
 }
 
@@ -73,7 +73,7 @@
 
 :global(.dark) .menuItem:hover,
 :global(.dark) .collapseContainer:hover {
-  background-color: var(--modern-c-bg-mute);
+  background-color: var(--rp-c-bg-mute);
   transition: all 0.2s;
 }
 
@@ -86,17 +86,17 @@
 
 .menuItem,
 .menuItemStatic {
-  color: var(--modern-c-text-2);
+  color: var(--rp-c-text-2);
   transition: all 0.2s;
 }
 
 .menuItemActive {
-  background-color: var(--modern-c-brand-tint);
-  color: var(--modern-c-brand);
+  background-color: var(--rp-c-brand-tint);
+  color: var(--rp-c-brand);
   font-weight: bolder;
 }
 
-:global(.modern-sidebar-group) {
+:global(.rspress-sidebar-group) {
   position: relative;
   &::before {
     content: '';
@@ -105,6 +105,6 @@
     left: 12px;
     width: 1px;
     height: 100%;
-    background-color: var(--modern-c-gray-light-4);
+    background-color: var(--rp-c-gray-light-4);
   }
 }
