--- a/packages/core/src/theme-default/styles/doc/code.css
+++ b/packages/core/src/theme-default/styles/doc/code.css
@@ -1,87 +1,87 @@
 /** Define code style */
 :root {
-  --modern-code-font-size: 14px;
-  --modern-code-block-color: rgb(46, 52, 64);
-  --modern-code-title-bg: rgba(0, 99, 199, 0.05);
-  --modern-code-block-bg: #f6f8fa;
+  --rp-code-font-size: 14px;
+  --rp-code-block-color: rgb(46, 52, 64);
+  --rp-code-title-bg: rgba(0, 99, 199, 0.05);
+  --rp-code-block-bg: #f6f8fa;
 
-  --modern-code-line-highlight-color: rgba(0, 99, 199, 0.1);
-  --modern-code-line-number-color: rgba(235, 235, 235, 0.38);
+  --rp-code-line-highlight-color: rgba(0, 99, 199, 0.1);
+  --rp-code-line-number-color: rgba(235, 235, 235, 0.38);
 
-  --modern-code-copy-code-hover-bg: rgba(255, 255, 255, 0.05);
-  --modern-code-copy-code-active-text: rgba(235, 235, 235, 0.6);
+  --rp-code-copy-code-hover-bg: rgba(255, 255, 255, 0.05);
+  --rp-code-copy-code-active-text: rgba(235, 235, 235, 0.6);
 }
 
 .dark {
-  --modern-code-block-color: rgb(229, 231, 235);
-  --modern-code-block-bg: #242424;
-  --modern-code-title-bg: rgba(255, 255, 255, 0.04);
-  --modern-code-line-highlight-color: rgba(255, 255, 255, 0.1);
-  --modern-code-line-number-color: rgba(60, 60, 60, 0.33);
+  --rp-code-block-color: rgb(229, 231, 235);
+  --rp-code-block-bg: #242424;
+  --rp-code-title-bg: rgba(255, 255, 255, 0.04);
+  --rp-code-line-highlight-color: rgba(255, 255, 255, 0.1);
+  --rp-code-line-number-color: rgba(60, 60, 60, 0.33);
 }
 
 :root {
-  --modern-icon-copy: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z' fill='%23cccccc'/%3E%3Cpath d='M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z' fill='%23cccccc'/%3E%3C/svg%3E");
-  --modern-icon-copied: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m13 24l-9-9l1.41-1.41L13 21.17L26.59 7.59L28 9L13 24z' fill='%2360c054'/%3E%3C/svg%3E");
+  --rp-icon-copy: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z' fill='%23cccccc'/%3E%3Cpath d='M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z' fill='%23cccccc'/%3E%3C/svg%3E");
+  --rp-icon-copied: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m13 24l-9-9l1.41-1.41L13 21.17L26.59 7.59L28 9L13 24z' fill='%2360c054'/%3E%3C/svg%3E");
 }
 
-.modern-doc :not(pre, h1, h2, h3, h4, h5, h6) > code {
-  font-size: var(--modern-code-font-size);
+.rspress-doc :not(pre, h1, h2, h3, h4, h5, h6) > code {
+  font-size: var(--rp-code-font-size);
 }
 
-.modern-doc :not(pre, div, a) > code {
+.rspress-doc :not(pre, div, a) > code {
   border-radius: 20px;
   padding: 4px 8px;
-  color: var(--modern-c-text-code);
-  background-color: var(--modern-c-bg-mute);
+  color: var(--rp-c-text-code);
+  background-color: var(--rp-c-bg-mute);
 }
 
-.modern-doc h1 > code,
-.modern-doc h2 > code,
-.modern-doc h3 > code {
+.rspress-doc h1 > code,
+.rspress-doc h2 > code,
+.rspress-doc h3 > code {
   font-size: 0.9em;
 }
 
-.modern-doc a > code {
-  color: var(--modern-c-brand);
+.rspress-doc a > code {
+  color: var(--rp-c-brand);
   transition: color 0.25s;
   border: none;
 }
 
-.modern-doc a:hover > code {
-  color: var(--modern-c-brand-dark);
+.rspress-doc a:hover > code {
+  color: var(--rp-c-brand-dark);
 }
 
-.modern-doc div[class*='language-'] {
+.rspress-doc div[class*='language-'] {
   position: relative;
   margin: 16px 0;
-  background-color: var(--modern-code-block-bg);
+  background-color: var(--rp-code-block-bg);
   overflow-x: auto;
   transition: background-color 0.5s;
 }
 
-.modern-doc .modern-code-title {
+.rspress-doc .rspress-code-title {
   padding: 12px 16px;
-  font-size: var(--modern-code-font-size);
-  background-color: var(--modern-code-title-bg);
+  font-size: var(--rp-code-font-size);
+  background-color: var(--rp-code-title-bg);
   transition: background-color 0.5s;
 }
 
 @media (min-width: 640px) {
-  .modern-doc div[class*='language-'] {
+  .rspress-doc div[class*='language-'] {
     border-radius: 16px;
     margin: 24px 0;
   }
 }
 
 @media (max-width: 640px) {
-  .modern-doc li div[class*='language-'] {
+  .rspress-doc li div[class*='language-'] {
     border-radius: 8px 0 0 8px;
   }
 }
 
-.modern-doc [class*='language-'] pre,
-.modern-doc [class*='language-'] code {
+.rspress-doc [class*='language-'] pre,
+.rspress-doc [class*='language-'] code {
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -96,7 +96,7 @@
   hyphens: none;
 }
 
-.modern-doc [class*='language-'] pre {
+.rspress-doc [class*='language-'] pre {
   position: relative;
   z-index: 1;
   margin: 0;
@@ -104,23 +104,23 @@
   overflow-x: auto;
 }
 
-.modern-doc [class*='language-'] code {
+.rspress-doc [class*='language-'] code {
   display: block;
   padding: 16px 0;
   width: fit-content;
   min-width: 100%;
   line-height: 1.7;
-  font-size: var(--modern-code-font-size);
-  color: var(--modern-code-block-color);
-  background-color: var(--modern-code-block-bg);
+  font-size: var(--rp-code-font-size);
+  color: var(--rp-code-block-color);
+  background-color: var(--rp-code-block-bg);
   transition: color 0.5s;
 }
 
-.modern-doc [class*='language-'] .modern-code-content {
+.rspress-doc [class*='language-'] .rspress-code-content {
   position: relative;
 }
 
-.modern-doc [class*='language-'] .modern-code-content button.copy {
+.rspress-doc [class*='language-'] .rspress-code-content button.copy {
   position: absolute;
   top: 12px;
   right: 12px;
@@ -133,33 +133,36 @@
   height: 20px;
   opacity: 0;
   cursor: pointer;
-  background-image: var(--modern-icon-copy);
+  background-image: var(--rp-icon-copy);
   background-position: 50%;
   background-size: 20px;
   background-repeat: no-repeat;
   transition: all 0.16s;
-  background-color: var(--modern-code-copy-code-hover-bg);
+  background-color: var(--rp-code-copy-code-hover-bg);
 }
 
-.modern-doc [class*='language-']:hover .modern-code-content button.copy,
-.modern-doc [class*='language-'] .modern-code-content button.copy:focus {
+.rspress-doc [class*='language-']:hover .rspress-code-content button.copy,
+.rspress-doc [class*='language-'] .rspress-code-content button.copy:focus {
   opacity: 1;
 }
 
-.modern-doc [class*='language-'] .modern-code-content button.copy:hover {
+.rspress-doc [class*='language-'] .rspress-code-content button.copy:hover {
   transform: scale(1.15);
 }
 
-.modern-doc [class*='language-'] .modern-code-content button.copy.copied,
-.modern-doc [class*='language-'] .modern-code-content button.copy:hover.copied {
+.rspress-doc [class*='language-'] .rspress-code-content button.copy.copied,
+.rspress-doc
+  [class*='language-']
+  .rspress-code-content
+  button.copy:hover.copied {
   border-radius: 0 4px 4px 0;
-  background-image: var(--modern-icon-copied);
+  background-image: var(--rp-icon-copied);
   transform: scale(1);
   opacity: 1;
 }
 
-.modern-doc [class*='language-'] .modern-code-content span.highlighted {
-  background-color: var(--modern-code-line-highlight-color);
+.rspress-doc [class*='language-'] .rspress-code-content span.highlighted {
+  background-color: var(--rp-code-line-highlight-color);
   position: absolute;
   display: block;
   left: 0;
@@ -167,6 +170,6 @@
   padding-left: 20px;
 }
 
-.modern-doc [class*='language-'] .modern-code-content > code {
+.rspress-doc [class*='language-'] .rspress-code-content > code {
   padding: 16px 20px;
 }
