--- a/packages/core/src/theme-default/styles/doc/container.css
+++ b/packages/core/src/theme-default/styles/doc/container.css
@@ -2,31 +2,31 @@
   * Container Style, the dom structure is Related to `@modern-js/remark-container`.
  */
 :root {
-  --modern-container-info-border: rgba(7, 156, 112, 0.3);
-  --modern-container-info-text: #399c70;
-  --modern-container-info-bg: rgba(7, 156, 112, 0.02);
-  --modern-container-info-code-bg: rgba(7, 156, 112, 0.1);
+  --rp-container-info-border: rgba(7, 156, 112, 0.3);
+  --rp-container-info-text: #399c70;
+  --rp-container-info-bg: rgba(7, 156, 112, 0.02);
+  --rp-container-info-code-bg: rgba(7, 156, 112, 0.1);
 
-  --modern-container-warning-border: rgba(255, 197, 23, 0.5);
-  --modern-container-warning-text: #ad850e;
-  --modern-container-warning-bg: rgba(255, 197, 23, 0.02);
-  --modern-container-warning-code-bg: rgba(255, 197, 23, 0.1);
+  --rp-container-warning-border: rgba(255, 197, 23, 0.5);
+  --rp-container-warning-text: #ad850e;
+  --rp-container-warning-bg: rgba(255, 197, 23, 0.02);
+  --rp-container-warning-code-bg: rgba(255, 197, 23, 0.1);
 
-  --modern-container-danger-border: rgba(237, 60, 80, 0.5);
-  --modern-container-danger-text: #ab2131;
-  --modern-container-danger-bg: rgba(237, 60, 80, 0.02);
-  --modern-container-danger-code-bg: rgba(237, 60, 80, 0.1);
+  --rp-container-danger-border: rgba(237, 60, 80, 0.5);
+  --rp-container-danger-text: #ab2131;
+  --rp-container-danger-bg: rgba(237, 60, 80, 0.02);
+  --rp-container-danger-code-bg: rgba(237, 60, 80, 0.1);
 }
 
 .dark {
-  --modern-container-warning-border: rgba(255, 197, 23, 0.25);
-  --modern-container-warning-text: #fcd253;
+  --rp-container-warning-border: rgba(255, 197, 23, 0.25);
+  --rp-container-warning-text: #fcd253;
 
-  --modern-container-danger-border: rgba(237, 60, 80, 0.25);
-  --modern-container-danger-text: #f54e82;
+  --rp-container-danger-border: rgba(237, 60, 80, 0.25);
+  --rp-container-danger-text: #f54e82;
 }
 
-.modern-doc .modern-directive {
+.rspress-doc .modern-directive {
   border: 1px solid transparent;
   border-radius: 16px;
   padding: 20px 24px 12px;
@@ -36,68 +36,68 @@
   margin: 24px 0;
 }
 
-.modern-doc .modern-directive .modern-directive-title {
+.rspress-doc .modern-directive .modern-directive-title {
   margin-bottom: 8px;
   font-weight: 600;
   font-size: 16px;
 }
 
-.modern-doc .modern-directive .modern-directive-content p {
+.rspress-doc .modern-directive .modern-directive-content p {
   margin: 8px 0;
 }
 
-.modern-doc .modern-directive .modern-directive-icon {
+.rspress-doc .modern-directive .modern-directive-icon {
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-right: 3px;
 }
 
-.modern-doc .modern-directive p {
+.rspress-doc .modern-directive p {
   margin: 8px 0;
 }
 
-.modern-doc .modern-directive code {
+.rspress-doc .modern-directive code {
   color: inherit;
   font-weight: bold;
   font-size: 13px;
 }
 
-.modern-doc .modern-directive.tip,
-.modern-doc .modern-directive.note,
-.modern-doc .modern-directive.info {
-  border-color: var(--modern-container-info-border);
-  color: var(--modern-container-info-text);
-  background-color: var(--modern-container-info-bg);
+.rspress-doc .modern-directive.tip,
+.rspress-doc .modern-directive.note,
+.rspress-doc .modern-directive.info {
+  border-color: var(--rp-container-info-border);
+  color: var(--rp-container-info-text);
+  background-color: var(--rp-container-info-bg);
 }
 
-.modern-doc .modern-directive.tip code,
-.modern-doc .modern-directive.note code {
-  background-color: var(--modern-container-info-code-bg);
+.rspress-doc .modern-directive.tip code,
+.rspress-doc .modern-directive.note code {
+  background-color: var(--rp-container-info-code-bg);
 }
 
-.modern-doc .modern-directive.info code {
-  background-color: var(--modern-container-info-code-bg);
+.rspress-doc .modern-directive.info code {
+  background-color: var(--rp-container-info-code-bg);
 }
 
-.modern-doc .modern-directive.warning {
-  border-color: var(--modern-container-warning-border);
-  color: var(--modern-container-warning-text);
-  background-color: var(--modern-container-warning-bg);
+.rspress-doc .modern-directive.warning {
+  border-color: var(--rp-container-warning-border);
+  color: var(--rp-container-warning-text);
+  background-color: var(--rp-container-warning-bg);
 }
 
-.modern-doc .modern-directive.warning code {
-  background-color: var(--modern-container-warning-code-bg);
+.rspress-doc .modern-directive.warning code {
+  background-color: var(--rp-container-warning-code-bg);
 }
 
-.modern-doc .modern-directive.caution,
-.modern-doc .modern-directive.danger {
-  border-color: var(--modern-container-danger-border);
-  color: var(--modern-container-danger-text);
-  background-color: var(--modern-container-danger-bg);
+.rspress-doc .modern-directive.caution,
+.rspress-doc .modern-directive.danger {
+  border-color: var(--rp-container-danger-border);
+  color: var(--rp-container-danger-text);
+  background-color: var(--rp-container-danger-bg);
 }
 
-.modern-doc .modern-directive.caution code,
-.modern-doc .modern-directive.danger code {
-  background-color: var(--modern-container-danger-code-bg);
+.rspress-doc .modern-directive.caution code,
+.rspress-doc .modern-directive.danger code {
+  background-color: var(--rp-container-danger-code-bg);
 }
