--- a/packages/plugin-preview/src/virtual-demo.scss
+++ b/packages/plugin-preview/src/virtual-demo.scss
@@ -1,9 +1,9 @@
 :root {
-  --modern-iframe-bg: var(--modern-code-block-bg);
+  --rp-iframe-bg: var(--rp-code-block-bg);
 }
 
 body {
-  background-color: var(--modern-iframe-bg);
+  background-color: var(--rp-iframe-bg);
 }
 
 .preview-nav {
@@ -12,8 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 56px;
-  background-color: var(--modern-c-bg);
+  background-color: var(--rp-c-bg);
   font-weight: 600;
   font-size: 17px;
 }
-
