--- a/packages/plugin-preview/static/global-components/Container.scss
+++ b/packages/plugin-preview/static/global-components/Container.scss
@@ -1,15 +1,14 @@
 :root {
-  --modern-preview-button-hover-bg: #e5e6eb;
-  --modern-preview-button-bg: #e5e6eb
-
+  --rp-preview-button-hover-bg: #e5e6eb;
+  --rp-preview-button-bg: #e5e6eb;
 }
 
 .dark {
-  --modern-preview-button-hover-bg: #c5c5c5;
-  --modern-preview-button-bg: #c5c5c5;
+  --rp-preview-button-hover-bg: #c5c5c5;
+  --rp-preview-button-bg: #c5c5c5;
 }
 
-.modern-preview {
+.rspress-preview {
   padding: 16px 0;
 
   &-operations {
@@ -20,11 +19,11 @@
       text-align: center;
       border-radius: 50%;
       border: 1px solid transparent;
-      background-color: var(--modern-c-bg-soft);
+      background-color: var(--rp-c-bg-soft);
       margin-left: 14px;
 
       &:hover {
-        background-color: var(--modern-preview-button-hover-bg);
+        background-color: var(--rp-preview-button-hover-bg);
       }
     }
 
