--- a/packages/plugin-preview/static/global-components/DemoBlock.scss
+++ b/packages/plugin-preview/static/global-components/DemoBlock.scss
@@ -1,14 +1,14 @@
 :root {
-  --modern-demo-block-bg: #f7f8fA;
+  --rp-demo-block-bg: #f7f8fa;
 }
 
 .dark {
-  --modern-demo-block-bg: #1a1a1a
+  --rp-demo-block-bg: #1a1a1a;
 }
 
-.modern-demo-block {
+.rspress-demo-block {
   padding-bottom: 12px;
-  background-color: var(--modern-demo-block-bg);
+  background-color: var(--rp-demo-block-bg);
   &-title {
     padding: 12px 12px 8px;
     color: #697b8c;
