--- a/packages/plugin-preview/static/global-components/Device.scss
+++ b/packages/plugin-preview/static/global-components/Device.scss
@@ -1,46 +1,48 @@
 .fixed-device {
   display: none;
   position: fixed;
-  top: calc(var(--modern-nav-height) + var(--modern-preview-padding));
+  top: calc(var(--rp-nav-height) + var(--rp-preview-padding));
   overflow: hidden;
 }
 
 .fixed-iframe {
-  height: var(--modern-device-height);
-  max-height: calc(100vh - var(--modern-preview-padding) * 2 - var(--modern-nav-height));
+  height: var(--rp-device-height);
+  max-height: calc(
+    100vh - var(--rp-preview-padding) * 2 - var(--rp-nav-height)
+  );
   width: 360px;
   pointer-events: auto;
-  border-radius: var(--modern-device-border-radius) var(--modern-device-border-radius) 0 0;
-  border: var(--modern-device-border);
+  border-radius: var(--rp-device-border-radius) var(--rp-device-border-radius) 0
+    0;
+  border: var(--rp-device-border);
 }
 
 .fixed-operation {
-  border: var(--modern-device-border);
+  border: var(--rp-device-border);
   border-top: 0;
-  border-radius: 0 0 var(--modern-device-border-radius) var(--modern-device-border-radius);
+  border-radius: 0 0 var(--rp-device-border-radius)
+    var(--rp-device-border-radius);
 }
 
 :root {
-  --modern-device-width: 360px;
-  --modern-device-height: 640px;
-  --modern-device-border-radius: 20px;
-  --modern-device-border: 1px solid #e5e6e8;
+  --rp-device-width: 360px;
+  --rp-device-height: 640px;
+  --rp-device-border-radius: 20px;
+  --rp-device-border: 1px solid #e5e6e8;
 }
 
-
-@media (min-width: 960px){
+@media (min-width: 960px) {
   .fixed-device {
     display: inline;
-    left: calc(1280px - var(--modern-device-width) - var(--modern-preview-padding));
+    left: calc(1280px - var(--rp-device-width) - var(--rp-preview-padding));
     right: auto;
   }
 }
 
-@media (min-width: 1280px){
+@media (min-width: 1280px) {
   .fixed-device {
     display: inline;
-    right: var(--modern-preview-padding);
+    right: var(--rp-preview-padding);
     left: auto;
   }
 }
-
