--- a/packages/plugin-preview/static/global-styles/mobile.css
+++ b/packages/plugin-preview/static/global-styles/mobile.css
@@ -1,35 +1,35 @@
-:root .modern-preview div[class*='language-'] {
+:root .rspress-preview div[class*='language-'] {
   margin: 0;
   border-radius: 0;
   height: 100%;
 }
 
 :root {
-  --modern-preview-padding: 32px
+  --rp-preview-padding: 32px;
 }
 
 @media (min-width: 1280px) {
-  .modern-doc-layout {
-    width: calc(100% - var(--modern-preview-padding));
-    margin-left: var(--modern-preview-padding);
+  .rspress-doc-layout {
+    width: calc(100% - var(--rp-preview-padding));
+    margin-left: var(--rp-preview-padding);
   }
 
-  .modern-sidebar {
-    margin-left: var(--modern-preview-padding);
+  .rspress-sidebar {
+    margin-left: var(--rp-preview-padding);
   }
 
-  .modern-doc-nav-container {
+  .rspress-doc-nav-container {
     max-width: 100%;
-    margin-left: var(--modern-preview-padding);
+    margin-left: var(--rp-preview-padding);
   }
 
-  .modern-doc-container {
-    padding-right: var(--modern-preview-padding);
-    padding-left: var(--modern-preview-padding);
+  .rspress-doc-container {
+    padding-right: var(--rp-preview-padding);
+    padding-left: var(--rp-preview-padding);
   }
 
-  .modern-doc {
+  .rspress-doc {
     width: 100%;
-    padding-right: var(--modern-preview-padding);
+    padding-right: var(--rp-preview-padding);
   }
 }
