--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -105,7 +105,7 @@
     left: 12px;
     width: 1px;
     height: 100%;
-    background-color: var(--rp-c-bg-mute);
+    background-color: var(--rp-c-gray-light-4);
   }
 }
 
