fix: rspress-sidebar-group divider style in dark mode (#30)
* fix: rspress-sidebar-group divider style in dark mode

* chore: fix light color

--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -108,3 +108,9 @@
     background-color: var(--rp-c-gray-light-4);
   }
 }
+
+:global(.dark .rspress-sidebar-group) {
+  &::before {
+    background-color: var(--rp-c-bg-mute);
+  }
+}
