fix: styles in modern-plugin-rspress

--- a/packages/modern-plugin-rspress/static/global-styles/index.css
+++ b/packages/modern-plugin-rspress/static/global-styles/index.css
@@ -1,7 +1,7 @@
 :root {
-  --modern-c-brand: #165DFF;
-  --modern-c-brand-dark: #165DFF;
-  --modern-c-brand-darker: #165DFF;
-  --modern-c-brand-light: #165DFF;
-  --modern-c-brand-lighter: #165DFF;
+  --rp-c-brand: #165dff;
+  --rp-c-brand-dark: #165dff;
+  --rp-c-brand-darker: #165dff;
+  --rp-c-brand-light: #165dff;
+  --rp-c-brand-lighter: #165dff;
 }
