feat: support container syntax by plugin

--- a/packages/plugin-container-syntax/container.css
+++ b/packages/plugin-container-syntax/container.css
@@ -1,5 +1,5 @@
 /*
-  * Container Style, the dom structure is Related to `@modern-js/remark-container`.
+  * Container Style
  */
 :root {
   --rp-container-info-border: rgba(7, 156, 112, 0.3);
