feat: add custom tab in document

--- a/packages/core/src/theme-default/components/HomeHero/index.module.scss
+++ b/packages/core/src/theme-default/components/HomeHero/index.module.scss
@@ -28,3 +28,10 @@
 :global(.dark) .mask {
   opacity: 0.15;
 }
+
+@media (min-width: 640px) {
+  :global(.rspress-home-hero-image) {
+    width: 375px;
+    height: 375px;
+  }
+}
