--- a/packages/core/src/theme-default/styles/vars.css
+++ b/packages/core/src/theme-default/styles/vars.css
@@ -16,7 +16,7 @@
   --rp-c-divider: rgba(60, 60, 60, 0.29);
   --rp-c-divider-light: rgba(60, 60, 60, 0.12);
 
-  --rp-c-text-1: #213547;
+  --rp-c-text-1: #23272f;
   --rp-c-text-2: rgba(60, 60, 60, 0.66);
   --rp-c-text-3: rgba(60, 60, 60, 0.33);
   --rp-c-text-4: rgba(60, 60, 60, 0.18);
