fix: sidebar group not highlight when switching route

--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -87,7 +87,7 @@
 .menuItemStatic {
   color: var(--rp-c-text-2);
   transition: color 0.2s;
-  font-weight: normal;
+  font-weight: 500;
 }
 
 .menuItemActive {
