fix: aside style

--- a/packages/core/src/theme-default/components/Aside/index.css
+++ b/packages/core/src/theme-default/components/Aside/index.css
@@ -1,12 +1,18 @@
-.aside-item {
+.aside-link {
+  padding-bottom: 1px;
+}
+.aside-link-text {
+  padding: 0px 16px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   transition: all 0.2s ease-in-out;
   border-radius: 1rem 0 0 1rem;
+  font-size: 13px;
+  line-height: 1.75rem;
 }
 
-.aside-item:hover {
+.aside-link-text:hover {
   background-color: var(--rp-c-bg-mute);
 }
 
