--- a/packages/core/src/theme-default/styles/code.css
+++ b/packages/core/src/theme-default/styles/code.css
@@ -71,8 +71,8 @@
   .rspress-doc div[class*='language-'] {
     border-radius: 16px;
     margin: 24px 0;
-    box-shadow: 0px 0.8px 2px rgba(0, 0, 0, 0.032),
-      0px 2.7px 6.7px rgba(0, 0, 0, 0.048), 0px 12px 30px rgba(0, 0, 0, 0.08);
+    /* box-shadow: 0px 0.8px 2px rgba(0, 0, 0, 0.032), */
+    /* 0px 2.7px 6.7px rgba(0, 0, 0, 0.048), 0px 12px 30px rgba(0, 0, 0, 0.08); */
     contain: content;
   }
 }
