--- a/packages/core/src/theme-default/components/Sidebar/index.module.scss
+++ b/packages/core/src/theme-default/components/Sidebar/index.module.scss
@@ -81,6 +81,7 @@
 .menuItemActive {
   font-size: 13px;
   line-height: 19px;
+  border-radius: 0 1rem 1rem 0;
 }
 
 .menuItem,
@@ -108,13 +109,17 @@
   transition: all 0.2s ease;
 }
 
+.menuGroupActive {
+  background-color: var(--rp-c-bg-mute);
+}
+
 :global(.rspress-sidebar-group) {
   position: relative;
   &::before {
     content: '';
     position: absolute;
     top: 0;
-    left: 12px;
+    left: 18px;
     width: 1px;
     height: 100%;
     background-color: var(--rp-c-gray-light-4);
