--- a/packages/plugin-playground/static/global-styles/web.css
+++ b/packages/plugin-playground/static/global-styles/web.css
@@ -1,19 +1,38 @@
 .rspress-playground {
   display: flex;
-  flex-direction: row;
   border: 1px solid rgba(28, 31, 35, 0.08);
   border-radius: 3px;
-  height: 260px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.rspress-playground-horizontal {
+  flex-direction: row;
+  height: 300px;
+}
+
+.rspress-playground-vertical {
+  flex-direction: column;
 }
 
 .rspress-playground > .rspress-playground-runner {
-  width: 40%;
   padding: 20px;
 }
 
+.rspress-playground-horizontal > .rspress-playground-runner {
+  width: 40%;
+}
+
 .rspress-playground > .rspress-playground-editor {
-  width: 60%;
   background-color: rgb(249, 249, 249);
+}
+
+.rspress-playground-horizontal > .rspress-playground-editor {
+  width: 60%;
+}
+
+.rspress-playground-vertical > .rspress-playground-editor {
+  height: 300px;
 }
 
 .rspress-playground > .rspress-playground-editor .monaco-editor,
