--- a/packages/core/src/theme-default/layout/DocLayout/index.module.scss
+++ b/packages/core/src/theme-default/layout/DocLayout/index.module.scss
@@ -34,7 +34,8 @@
     width: calc(100% - var(--rp-sidebar-width));
     padding: 48px 48px 72px 0;
 
-    :global(.rspress-doc) {
+    :global(.rspress-doc),
+    :global(.rspress-doc-footer) {
       width: 100%;
     }
   }
@@ -52,7 +53,8 @@
 
   .content {
     padding: 48px 0 72px 0;
-    :global(.rspress-doc) {
+    :global(.rspress-doc),
+    :global(.rspress-doc-footer) {
       padding: 0 48px;
       box-sizing: content-box;
       width: calc(100vw - var(--rp-aside-width) - var(--rp-sidebar-width));
@@ -67,7 +69,8 @@
   }
 
   .content {
-    :global(.rspress-doc) {
+    :global(.rspress-doc),
+    :global(.rspress-doc-footer) {
       box-sizing: content-box;
       width: calc(100vw - var(--rp-sidebar-width) - var(--rp-aside-width));
       padding: 0
