feat: add min-height in .rspress-doc

--- a/packages/core/src/theme-default/layout/DocLayout/index.module.scss
+++ b/packages/core/src/theme-default/layout/DocLayout/index.module.scss
@@ -14,6 +14,10 @@
   display: none;
 }
 
+:global(.rspress-doc) {
+  min-height: 60vh;
+}
+
 @media (max-width: 960px) {
   .docLayout {
     position: relative;
