docs: add benchmark card

--- a/packages/core/src/theme-default/components/Tabs/index.module.scss
+++ b/packages/core/src/theme-default/components/Tabs/index.module.scss
@@ -16,6 +16,7 @@
   padding-top: 4px;
   display: flex;
   min-width: 100%;
+  justify-content: center;
   background-color: var(--rp-code-title-bg);
 }
 
