--- a/packages/document/components/Benchmark/index.module.scss
+++ b/packages/document/components/Benchmark/index.module.scss
@@ -23,6 +23,7 @@
   height: 50px;
   border-radius: 10px;
   padding: 4px;
+  padding-right: 15px;
   border: 1px solid var(--rp-c-gray-light-4);
   box-sizing: content-box;
 }
