--- a/packages/core/src/theme-default/layout/DocLayout/index.module.scss
+++ b/packages/core/src/theme-default/layout/DocLayout/index.module.scss
@@ -71,10 +71,10 @@
 @media (min-width: 960px) {
   .docLayout {
     width: 100%;
+    display: flex;
   }
 
   .content {
-    margin-left: var(--rp-sidebar-width);
     width: calc(100% - var(--rp-sidebar-width));
     padding: 48px 48px 72px 0;
 
