fix: sidebar style in dark mode

--- a/packages/core/src/theme-default/components/Nav/index.module.scss
+++ b/packages/core/src/theme-default/components/Nav/index.module.scss
@@ -15,6 +15,8 @@
   background: var(--rp-c-bg);
   height: var(--rp-nav-height);
   z-index: var(--rp-z-index-nav);
+  // Hidden the box shadow
+  // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
 
 .leftNav {
