--- a/packages/modern-plugin-rspress/static/global-components/Overview.module.scss
+++ b/packages/modern-plugin-rspress/static/global-components/Overview.module.scss
@@ -19,8 +19,6 @@
   }
 }
 
-
-
 .featureCard {
   background-color: transparent;
   border-radius: 8px;
@@ -32,13 +30,13 @@
 }
 
 .featureCard:hover {
-  background: rgba(248,250,252,1);
+  background: rgba(248, 250, 252, 1);
 }
 
 .featureCard svg {
   width: 24px;
   height: 24px;
-  color: rgba(0,0,0,0.2);
+  color: rgba(0, 0, 0, 0.2);
 }
 
 .featureCard:hover svg {
