--- a/packages/plugin-playground/static/global-styles/web.css
+++ b/packages/plugin-playground/static/global-styles/web.css
@@ -19,7 +19,8 @@
   flex-direction: column;
 }
 
-.rspress-playground > .rspress-playground-runner {
+.rspress-playground-runner {
+  position: relative;
   padding: 20px;
   overflow: auto;
 }
@@ -48,4 +49,20 @@
 
 .rspress-playground-vertical > .rspress-playground-editor {
   border-top: 1px solid rgba(28, 31, 35, 0.08);
+}
+
+.rspress-playground-error {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background: #a12027;
+  opacity: 0.86;
+  color: #fff;
+  padding: 10px;
+  overflow: auto;
+  font-size: 12px;
 }
